After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 79925 - X freeze ?
X freeze ?
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other Linux
: Urgent critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-04-26 05:37 UTC by Andreas J. Guelzow
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2002-04-26 05:37:11 UTC
Well, this is related to http://bugzilla.gnome.org/show_bug.cgi?id=56740
but the bug is different.

In cvs-head,

into cell B3, type =sum(A3:A  
without a following return. Now click on the header of column I, bingo:
gnumeric and X become unresponsive (although the cursor in B3 continues to
blink).
Comment 1 Jody Goldberg 2002-05-02 15:21:08 UTC
We'll probably have to back port this fix.
It stems from doing the cursor grab then testing for validity.
When we pop up the warning dialog we lose the unrelease event.
Comment 2 Jody Goldberg 2002-05-02 17:25:19 UTC
Fixed in CVS I'll back port on the weekend.